--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,12 @@
         	<version>2.0a5</version>
     	</dependency>
     	
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-core</artifactId>
+			<version>2.0.7-beta</version>
+		</dependency>
+    	
   </dependencies>
   <build>
     <finalName>webappRunnerSample</finalName>
